--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,7 @@
 {
     "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
     "cli": {
-      "analytics": false
+        "analytics": false
     },
     "version": 1,
     "newProjectRoot": "projects",
@@ -112,7 +112,10 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "src/styles.css"
+                            "src/styles.css",
+                            {
+                                "input": "src/scss/styles.scss"
+                            }
                         ],
                         "scripts": []
                     }
