--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.1.1",
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
+    "html2canvas": "^1.3.2",
     "ngx-json-viewer": "^3.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
